(#4) GetByPrettyUrlName for OverrideRecord objects. - Rework ListingInfo and related models to support EvsRecord and OverrideRecord   being stored in the same index. - Change ListingPageAPIOptions.AliasName to ListingInfoAliasName to support   separate indices for ListingInfo vs. LabelInformation. - Add APIInternalException to Common in order to move toward only using   APIErrorException in controllers. This needs to be copied to the template. - New GetStringAsStream method on TestingTools class. This also needs to   be copied to the template project. - Removed unneeded config overrides from appsettings.inttest.json.

--- a/src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
+++ b/src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
@@ -14,6 +18,8 @@
         <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.2.2" />
+    <PackageReference Include="NEST" Version="5.6.1" />
   </ItemGroup>
 
   <ItemGroup>
