--- a/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
+++ b/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
@@ -6,7 +6,7 @@
         "MaximumRetries": 5
     },
     "ListingPageAPI": {
-        "AliasName": "listingpage1"
+        "ListingInfoAliasName": "listinginfov1"
     },
     "NSwag": {
         "Title": "CTS Listing Page API",
