(#4) GetByPrettyUrlName for ListingInfo objects. - Rework models to reflect updated design. - Change ListingPageAPIOptions.AliasName to ListingInfoAliasName to support   separate indices for ListingInfo vs. LabelInformation. - Add APIInternalException to Common in order to move toward only using   APIErrorException in controllers. This needs to be copied to the template. - New GetStringAsStream method on TestingTools class. This also needs to   be copied to the template project. - Removed unneeded config overrides from appsettings.inttest.json.

--- a/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
+++ b/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
@@ -6,8 +6,8 @@
         "MaximumRetries": 5
     },
     "ListingPageAPI": {
-        "AliasName": "listingpage1",
-        "LabelInformationAliasName": "labelinformationv1"
+        "LabelInformationAliasName": "labelinformationv1",
+        "ListingInfoAliasName": "listinginfov1"
     },
     "NSwag": {
         "Title": "CTS Listing Page API",
