(#10) Implement LabelLookup Controller Get method
 * Add LabelLookup Controller with Get method
 * Add ILabelLookupQueryService interface with Get method
 * Add ESLabelLookupQueryService implementation with Get method
 * Add LabelInformationAliasName to API Options model
 * Add LabelInformationAliasName to appsettings
 * Add LabelLookupController tests for Get method
 * Add ESLabelLookupQueryService tests for Get method
 * Add test data for ESLabelLookupQueryService tests for Get method
 * Add LabelInformation comparer
 * Add APIInternalException
 * Add GetStringAsStream in TestingTools
 * Add integration tests for LabelLookup Controller Get method

--- a/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
+++ b/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
@@ -6,7 +6,8 @@
         "MaximumRetries": 5
     },
     "ListingPageAPI": {
-        "AliasName": "listingpage1"
+        "AliasName": "listingpage1",
+        "LabelInformationAliasName": "labelinformationv1"
     },
     "NSwag": {
         "Title": "CTS Listing Page API",
