--- a/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
+++ b/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
@@ -6,7 +6,7 @@
         "MaximumRetries": 5
     },
     "ListingPageAPI": {
-        "LabelInformationAliasName": "labelinformationv1",
+        "TrialTypeInfoAliasName": "trialtypeinfov1",
         "ListingInfoAliasName": "listinginfov1"
     },
     "NSwag": {
