(#38) Update Elasticsearch NEST to v7.9.0.
- Refactor ElasticsearchInterceptingConnection to use the ResponseBuilder
  static class to replace the removed instance-based version.
- Remove `Types` argument from ES Request objects in query service classes.
- Modify tests to retrieve the new RequestData.RequestMimeType property
  which replaces ContentType.
- Modify tests to remove document type from expected request paths.
- Update integration test data.
- Update integration mapping data files.
- Clean up unnecessary using statements.
- Update local integration tests to use Elasticsearch 7.9.2.
- Update GitHub integration test workflow to Elasticsearch 7.9.2.
- Fix bad JSON in unit test data that just randomly started being diagnosed.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -71,7 +71,10 @@ jobs:
     needs: test_build_release
     services:
       elasticsearch:
-        image: elasticsearch:5.6.16
+        image: elasticsearch:7.9.2
+        env:
+          ## Pass elasticsearch options via environment variables.
+          discovery.type: single-node
         ports:
           ## NOTE: This will be exposed as a random port referenced below by job.services.elasticsearch.ports[9200]
           - 9200/tcp
