--- a/src/NCI.OCPL.Api.CTSListingPages/web.config
+++ b/src/NCI.OCPL.Api.CTSListingPages/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\NCI.OCPL.Api.PlaceholderProject.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
+      <aspNetCore processPath="dotnet" arguments=".\NCI.OCPL.Api.CTSListingPages.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
       <security>
         <requestFiltering allowHighBitCharacters="true">
           <fileExtensions allowUnlisted="true" />
