(#45) Correct swagger page title
NSwag configuration change.

--- a/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
+++ b/src/NCI.OCPL.Api.CTSListingPages/appsettings.json
@@ -10,7 +10,7 @@
         "ListingInfoAliasName": "listinginfov1"
     },
     "NSwag": {
-        "Title": "CTS Listing Page API",
+        "Title": "Clinical Trial Listing Support API",
         "Description": "API for clinical trial listing pages"
     },
     "Logging": {
