(#47) Suppress sensitive headers
- Add a "default" controller to handle unknown routes.
- Remove "X-Powered-By" header from IIS.
- Remove "Server" header from API
- Prevent IIS from adding a server header with a version.

--- a/src/NCI.OCPL.Api.CTSListingPages/web.config
+++ b/src/NCI.OCPL.Api.CTSListingPages/web.config
@@ -11,6 +11,19 @@
           <fileExtensions allowUnlisted="true" />
         </requestFiltering>
       </security>
+      <httpProtocol>
+        <customHeaders>
+          <remove name="X-Powered-By" />
+        </customHeaders>
+      </httpProtocol>
+      <rewrite>
+        <outboundRules rewriteBeforeCache="true">
+          <rule name="Rewrite Server header">
+            <match serverVariable="RESPONSE_Server" pattern=".*" />
+            <action type="Rewrite" value="WebApis" />
+          </rule>
+        </outboundRules>
+      </rewrite>
     </system.webServer>
   </location>
 </configuration>
