--- a/integration-tests/docker-cts-listing-page-api/docker-compose.yml
+++ b/integration-tests/docker-cts-listing-page-api/docker-compose.yml
@@ -2,9 +2,12 @@ version: "3.7"
 
 services:
     elasticsearch:
-        image: elasticsearch:7.9.2
-        ## All of the ES settings can be set via the environment
-        ## vars.
+        build:
+            # Point to the root of the project.
+            context: ../../
+            # This path is relative to the context.
+            dockerfile: integration-tests/docker-cts-listing-page-api/elasticsearch/Dockerfile
+        # All of the ES settings can be set via the environment vars.
         environment:
             - discovery.type=single-node
             - ES_JAVA_OPTS=-Xms750m -Xmx750m
@@ -18,7 +21,7 @@ services:
         networks:
             listingpagesapi:
                 aliases:
-                    - elasticsearch
+                - elasticsearch
 
     api:
         build:
@@ -27,40 +30,30 @@ services:
             context: ../../
             ## This path is relative to the context. Fun, eh?
             dockerfile: integration-tests/docker-cts-listing-page-api/api/Dockerfile
+
+        volumes:
+            # Project root
+            - ../..:/app
+            # Integration configuration files we don't want in the source tree.
+            - ../../integration-tests/docker-cts-listing-page-api/api/runtime/appsettings.inttest.json:/app/src/NCI.OCPL.Api.CTSListingPages/appsettings.inttest.json
+            # Use the user's existing GitHub credentials
+            - ~/.nuget/NuGet/NuGet.Config:/root/.nuget/NuGet/NuGet.Config
+
         ports:
             # Lets make it one more than the default aspnetcore app
             - "5000:5000"
+
         ## NOTE: This does NOT mean that this machine will wait
         ## for elasticsearch to be running, just that the
         ## elasticsearch container should be running first.
+        depends_on:
+            - elasticsearch
+
         networks:
             listingpagesapi:
                 aliases:
                     - api
-        depends_on:
-            - elasticsearch
 
-    ## Commenting out the test container as there seem to be some
-    ## performance issues with Karate + API + ES running in docker.
-    # test-container:
-    #     image: openjdk:11
-    #     volumes:
-    #         - ..:/usr/src/app
-    #     environment:
-    #            - "ELASTIC_SEARCH_HOST=http://elasticsearch:9200"
-    #            - "KARATE_APIHOST=http://api:5000"
-    #     working_dir: /usr/src/app
-    #     command: /usr/src/app/bin/run-integration-tests.sh
-    #     ## NOTE: This does NOT mean that this machine will wait
-    #     ## for elasticsearch to be running, just that the
-    #     ## elasticsearch container should be running first.
-    #     networks:
-    #         listingpagesapi:
-    #             aliases:
-    #                 - tester
-    #     depends_on:
-    #         - elasticsearch
-    #         - api
 
 networks:
   listingpagesapi:
