--- a/src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
+++ b/src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -13,17 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference AllowExplicitVersion="True" Include="Microsoft.AspNetCore.App" Version="2.1.4">
-        <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
-        <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="NSwag.AspNetCore" Version="13.2.2" />
-    <PackageReference Include="NEST" Version="7.9.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NCI.OCPL.Api.Common\NCI.OCPL.Api.Common.csproj" />
+    <PackageReference Include="NCI.OCPL.Api.Common" Version="2.0.4" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.11.*" />
+    <PackageReference Include="NEST" Version="7.9.*" />
   </ItemGroup>
 
 </Project>
