--- a/src/NCI.OCPL.Api.CTSListingPages/web.config
+++ b/src/NCI.OCPL.Api.CTSListingPages/web.config
@@ -3,9 +3,9 @@
   <location path="." inheritInChildApplications="false">
     <system.webServer>
       <handlers>
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\NCI.OCPL.Api.CTSListingPages.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
+      <aspNetCore processPath="dotnet" arguments=".\NCI.OCPL.Api.CTSListingPages.dll" hostingModel="InProcess" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
       <security>
         <requestFiltering allowHighBitCharacters="true">
           <fileExtensions allowUnlisted="true" />
