--- a/src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
+++ b/src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NCI.OCPL.Api.Common" Version="2.0.4" />
+    <PackageReference Include="NCI.OCPL.Api.Common" Version="2.1.*" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.11.*" />
     <PackageReference Include="NEST" Version="7.9.*" />
   </ItemGroup>
