Temporary commit for development/testing purposes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   ci_remote:
-    uses: nciocpl/nci.ocpl.api.shared/.github/workflows/common-api-ci.yml@v2.x
+    uses: nciocpl/nci.ocpl.api.shared/.github/workflows/common-api-ci.yml@ticket/52-shared-wf
     with:
       api-project: src/NCI.OCPL.Api.CTSListingPages/NCI.OCPL.Api.CTSListingPages.csproj
       artifact-name: listing-page
